tests/NormalTests/paczka1/small_fuzzy/40291676.err
Error in line 3: A297 S861 88,9
Error in line 6: A297 A297 61,0
Error in line 8: A297 A805 80,0
Error in line 4: CwTr A727 83,0
